# tfg23_aplicacion

./: .env  .env.save  .gitignore  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json
backend/: backend.dockerfile  celeryworker.dockerfile  start-reload.sh  start.sh
backend/app/: pyproject.toml
backend/app/alembic/versions/: 0264a2946005_eliminacion_en_cascada.py  3d2b7c34107d_modelos_para_regresion.py  8ade0c9f75cc_estados.py  9b2916d72ffe_simplificacion.py  ad35a2f86200_eliminacion_correcta.py  d5dcfa15191a_rmse_a_float.py  d92641791660_cascade_en_herencia.py  dc1ca4f63afd_correccion_cascade.py  f9342dd338df_mejora_relacciones.py  ff90c8aaa00a_fecha_y_archivo_de_creacion.py
backend/app/app/: initial_data.py  main.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: imagen.py  models.py  states.py
backend/app/app/crud/: __init__.py  crud_model.py  crud_reg_model.py  crud_seg_model.py  crud_state.py
backend/app/app/db/: base.py  base_class.py  init_db.py
backend/app/app/models/: __init__.py  item.py  model.py  modelo.py  regression_model.py  regseg_model.py  segmentation_model.py  state.py  user.py
backend/app/app/schemas/: __init__.py  model.py  regression_model.py  segmentation_model.py  state.py
backend/app/app/services/: ModeloREG.py  Padding.py  YOLOSeg.py  __init__.py  archivos.py  models.py  onnx_service.py  regression_service.py  segmentation_service.py  states.py  utils.py
backend/app/app/services/.ipynb_checkpoints/: utils-checkpoint.py
frontend.old/: .prettierrc.js  (+3 more)
(+99 files in other folders)
